correcion boostrap y css

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,11 @@ test:
 
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: db_production
+  Bundler.require(*Rails.groups(assets: %w(development test production)))
+group :production do
+  gem 'rails_log_stdout',           github: 'heroku/rails_log_stdout'
+  gem 'rails3_serve_static_assets', github: 'heroku/rails3_serve_static_assets'
+end
